# tinycoder

./: LICENSE  README.md  pyproject.toml  tinycoder_rename_core.patch
docs/: index.html
mini_code_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
minicode/: __main__.py  agent_loop.py  anthropic_adapter.py  cli_commands.py  config.py  file_review.py  history.py  index.py  install.py  local_tool_shortcuts.py  manage_cli.py  mcp.py  mock_model.py  permissions.py  prompt.py  session.py  skills.py  tty_app.py  types.py
minicode/compact/: constants.py  context_collapse.py  prompt.py
minicode/tools/: ask_user.py  list_files.py  modify_file.py  patch_file.py  read_file.py  run_command.py  write_file.py
minicode/tui/: chrome.py  input.py  input_parser.py  markdown.py  transcript.py  types.py
minicode/utils/: tool_result_storage.py  web.py
tinycoder/: agent_loop.py  anthropic_adapter.py  background_tasks.py  cli_commands.py  config.py  history.py  index.py  install.py  local_tool_shortcuts.py  manage_cli.py  mcp.py  mcp_status.py  model_router.py  permissions.py  prompt.py  qwen_adapter.py  session.py  skills.py  tool.py  tty_app.py  ui.py  workspace.py
tinycoder/compact/: auto_compact.py  compact.py  manual_compact.py  microcompact.py  snip_compact.py
tinycoder/tools/: edit_file.py  grep_files.py  index.py  load_skill.py  run_command.py  web_fetch.py  web_search.py
tinycoder/tui/: chrome.py  index.py  input.py  markdown.py  screen.py
tinycoder_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+6 files in other folders)
