[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tinycoder-python"
version = "0.1.0"
description = "TinyCoder terminal AI coding assistant."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "TinyCoder"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
tinycoder = "tinycoder.index:main_sync"

[tool.setuptools.packages.find]
include = ["tinycoder*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
